bdr.BDR.scala.error
Erreur de compilation :
BDR:7: error: not found: type ==
    if (litMessage():String == A){
                            ^BDR:9: error: not found: type ==
    } else if (litMessage():String == Z) {
                                   ^