bdr.BDR.scala.code
var fini = false


  
  if (estSurMessage():Boolean) {
    
    if (litMessage():String == A){
      avance()
    } else if (litMessage():String == Z) {
      recule()
    }
    
   
  }
